<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_modeview"
        android:icon="@drawable/ic_grid"
        android:title="@string/change_mode"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>

            <!-- Pour le searchFragment -->
            <item
                android:icon="@drawable/ic_search"
                android:title="@string/sortSearch"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/action_search_sort1"
                        android:icon="@drawable/filter_1"
                        android:title="@string/sortSearch_method1"
                        app:showAsAction="ifRoom" />
                    <item
                        android:id="@+id/action_search_sort2"
                        android:icon="@drawable/filter_2"
                        android:title="@string/sortSearch_method2"
                        app:showAsAction="ifRoom" />
                    <item
                        android:id="@+id/action_search_sort3"
                        android:icon="@drawable/filter_3"
                        android:title="@string/sortSearch_method3"
                        app:showAsAction="ifRoom" />
                    <item
                        android:id="@+id/action_search_sort4"
                        android:icon="@drawable/filter_4"
                        android:title="@string/sortSearch_method4"
                        app:showAsAction="ifRoom" />
                </menu>
            </item>


            <!-- Pour le favoritesFragment -->
            <item
                android:icon="@drawable/ic_favorite"
                android:title="@string/sortFavorites"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/action_fav_sort1"
                        android:icon="@drawable/filter_1"
                        android:title="@string/sortFavorites_method1"
                        app:showAsAction="ifRoom" />
                    <item
                        android:id="@+id/action_fav_sort2"
                        android:icon="@drawable/filter_2"
                        android:title="@string/sortFavorites_method2"
                        app:showAsAction="ifRoom" />
                    <item
                        android:id="@+id/action_fav_sort3"
                        android:icon="@drawable/filter_3"
                        android:title="@string/sortFavorites_method3"
                        app:showAsAction="ifRoom" />
                </menu>
            </item>
        </menu>
    </item>
</menu>